--- a/index.html
+++ b/index.html
@@ -1,25 +1,31 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Estrutura de Página Simples</title>
-    <link rel="stylesheet" href="styles.css"> </head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>História da Computação</title>
+  <link rel="stylesheet" href="style.css">
+</head>
 <body>
-    <header>
-        <h1>Título da Página</h1>
-        <p class="subtitulo">Subtítulo ou descrição breve</p>
-    </header>
-    <nav>
-        <ul>
-            <li><a href="#home">Home</a></li>
-            <li><a href="#sobre">Sobre</a></li>
-            <li><a href="#servicos">Serviços</a></li>
-            <li><a href="#contato">Contato</a></li>
-        </ul>
-    </nav>
-    <main>
-        <section class="conteudo"> </section>
-    </main>
+  <div class="section" id="section1">
+    <h1 class="title">Título</h1>
+    <h2 class="subtitle">Subtítulo</h2>
+    <p class="text">Texto descritivo sobre a história da computação. Esta seção apresenta a introdução.</p>
+    <img src="imagem.jpg" alt="Descrição da Imagem">
+  </div>
+
+  <div class="section" id="section2">
+    <h1 class="title">Título</h1>
+    <h2 class="subtitle">Subtítulo</h2>
+    <p class="text">Texto detalhado sobre a evolução das máquinas. Foco na era moderna.</p>
+    <img src="imagem2.jpg" alt="Descrição da Imagem">
+  </div>
+
+  <div class="section" id="section3">
+    <h1 class="title">Título</h1>
+    <h2 class="subtitle">Subtítulo</h2>
+    <p class="text">Resumo sobre o impacto da computação nos dias atuais.</p>
+    <img src="imagem3.jpg" alt="Descrição da Imagem">
+  </div>
 </body>
 </html>
