--- a/index.html
+++ b/index.html
@@ -1,31 +1,29 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>História da Computação</title>
-  <link rel="stylesheet" href="style.css">
+ <meta charset="UTF-8">
+ <meta name="viewport" content="width=device-width, initial-scale=1.0">
+ <title>História da Computação</title>
+ <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="section" id="section1">
-    <h1 class="title">Título</h1>
-    <h2 class="subtitle">Subtítulo</h2>
-    <p class="text">Texto descritivo sobre a história da computação. Esta seção apresenta a introdução.</p>
-    <img src="imagem.jpg" alt="Descrição da Imagem">
-  </div>
-
-  <div class="section" id="section2">
-    <h1 class="title">Título</h1>
-    <h2 class="subtitle">Subtítulo</h2>
-    <p class="text">Texto detalhado sobre a evolução das máquinas. Foco na era moderna.</p>
-    <img src="imagem2.jpg" alt="Descrição da Imagem">
-  </div>
-
-  <div class="section" id="section3">
-    <h1 class="title">Título</h1>
-    <h2 class="subtitle">Subtítulo</h2>
-    <p class="text">Resumo sobre o impacto da computação nos dias atuais.</p>
-    <img src="imagem3.jpg" alt="Descrição da Imagem">
-  </div>
+ <div class="section" id="section1">
+ <h1>título</h1>
+ <h2>Subtítulo</h2>
+ <p>texto</p>
+ <img src="imagem" alt="descrição da Imagem">
+ </div>
+ <div class="section" id="section2">
+ <h1>Título</h1>
+ <h2>Subtítulo</h2>
+ <p>texto.</p>
+ <img src="endereço da imagem" alt="descrição da imagem">
+ </div>
+ <div class="section" id="section3">
+ <h1>Título</h1>
+ <h2>Subtítulo</h2>
+ <p>Texto.</p>
+ <img src="endereço da Imagem" alt="Descrição da imagem">
+ </div>
 </body>
 </html>
