--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
  <div class="section" id="section1">
  <h1>Curso Técnico de Desenvolvimento de Sistemas</h1>
- <h2>Subtítulo</h2>
+ <h2>O Início da Computação</h2>
  <p>texto</p>
  <img src="imagem" alt="descrição da Imagem">
  </div>
