--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
  <div class="section" id="section1">
  <h1>Curso Técnico de Desenvolvimento de Sistemas</h1>
  <h2>O Início da Computação</h2>
- <p>texto</p>
+ <p>A história da computação começou no século XIX com a criação do primeiro conceito
+  de computador mecânico por Charles Babbage. Ele projetou a "Máquina Analítica", que
+  nunca foi construída na época, mas é considerada o precursor dos computadores
+  modernos.</p>
  <img src="imagem" alt="descrição da Imagem">
  </div>
  <div class="section" id="section2">
