--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
  <img src="imagem" alt="descrição da Imagem">
  </div>
  <div class="section" id="section2">
- <h1>Título</h1>
- <h2>Subtítulo</h2>
+ <h1>A Revolução dos Computadores</h1>
+ <h2>De Tubos a Transistores</h2>
  <p>texto.</p>
  <img src="endereço da imagem" alt="descrição da imagem">
  </div>
