--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
  <div class="section" id="section2">
  <h1>A Revolução dos Computadores</h1>
  <h2>De Tubos a Transistores</h2>
- <p>texto.</p>
+ <p>Nos anos 1940, os primeiros computadores eletrônicos foram construídos usando tubos
+  de vácuo. Com o passar dos anos, os transistores revolucionaram a tecnologia, tornando
+  os computadores menores, mais rápidos e eficientes.</p>
  <img src="endereço da imagem" alt="descrição da imagem">
  </div>
  <div class="section" id="section3">
