--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
  <p>Nos anos 1940, os primeiros computadores eletrônicos foram construídos usando tubos
   de vácuo. Com o passar dos anos, os transistores revolucionaram a tecnologia, tornando
   os computadores menores, mais rápidos e eficientes.</p>
- <img src="endereço da imagem" alt="descrição da imagem">
+ <img src="pcantigo.png" alt="descrição da imagem">
  </div>
  <div class="section" id="section3">
  <h1>A Era da Internet</h1>
@@ -30,7 +30,7 @@
  <p>A criação da internet nos anos 1960 e sua popularização nos anos 1990 transformaram o
   mundo. Hoje, estamos todos conectados, e a ciência da computação continua a evoluir
   para criar novas formas de comunicação e inovação.</p>
- <img src="endereço da Imagem" alt="Descrição da imagem">
+ <img src="ssss.png" alt="Descrição da imagem">
  </div>
 </body>
 </html>
